Accepting all media types now, Vault (aka Blob storage) is content type agnostic.
